# fig2json

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  types.rs
src/blobs/: mod.rs  parser.rs  substitution.rs
src/parser/: chunks.rs  header.rs  mod.rs
src/schema/: mod.rs  tree.rs
src/schema/transformations/: border_weights_removal.rs  component_properties_removal.rs  derived_symbol_data_removal.rs  geometry_removal.rs  image_hash.rs  image_metadata_removal.rs  matrix_to_css.rs  mod.rs  overridden_symbol_id_removal.rs  symbol_data_removal.rs  text_data_removal.rs  text_metadata_removal.rs
