[package]
name = "fig2json"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# ZIP archive handling
zip = "0.6"

# Compression
flate2 = "1.0"
zstd = "0.13"

# Kiwi schema decoding
kiwi-schema = "0.2.1"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
